# wasm-host-bindgen

./: .gitignore  Cargo.toml  README.md
examples/: .gitignore  hello_world.py  hello_world.wasm  hello_world.wat  hello_world.webidl  ideal.output
lib/decoder-c/: Cargo.toml
lib/decoder-c/src/: lib.rs
lib/decoder-common/: Cargo.toml
lib/decoder-common/src/: lib.rs  module.rs  options.rs
lib/decoder-python/: Cargo.toml
lib/decoder-python/src/: lib.rs  prelude.py
lib/encoder/: Cargo.toml
lib/encoder/src/: lib.rs  options.rs
src/: main.rs
src/commands/: decode.rs  encode.rs  mod.rs
