[package]
name = "wasm-host-bindgen"
version = "0.0.1"
authors = ["Ivan Enderlin <ivan.enderlin@hoa-project.net>"]
edition = "2018"

[dependencies]
structopt = "0.2.18"
wasm-host-bindgen-decoder-common = { path = "lib/decoder-common" }
wasm-host-bindgen-decoder-python = { path = "lib/decoder-python" }
wasm-host-bindgen-encoder = { path = "lib/encoder" }

[workspace]
members = [
        "lib/decoder-common",
        "lib/decoder-python",
        "lib/encoder"
]
